--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
+    "@tanstack/react-query": "^5.51.3",
+    "axios": "^1.7.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.2.12",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "sweetalert2": "^11.12.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
