--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-awesome-reveal": "^4.2.12",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-lottie": "^1.2.4",
     "react-router-dom": "^6.24.1",
     "sweetalert2": "^11.12.2"
   },
